--- a/project-estacionamento/templates/add.html
+++ b/project-estacionamento/templates/add.html
@@ -6,7 +6,15 @@
     <title>Adicionar Carro</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body class="add-page">
+    <header class="header">
+        <h1 class="title">Adicionar Carro</h1>
+    </header>
+    <main class="main-content">
+        <form action="/add" method="post" class="form">
+            <div class="form-group"></div>
+            
+    </main>
     
 </body>
 </html>
